--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,16 @@
             <version>4.11</version>
         </dependency>
     </dependencies>
-
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/java/com/yossis/threadray/ui/javafx/view</directory>
+                <targetPath>com/yossis/threadray/ui/javafx/view</targetPath>
+                <!--<includes>
+                    <include>*.fxml</include>
+                </includes>-->
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -49,10 +57,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>2.5</version>
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <Main-Class>com.yossis.threadray.ThreadRay</Main-Class>
+                            <Main-Class>com.yossis.threadray.ui.swing.ThreadRay</Main-Class>
                         </manifestEntries>
                     </archive>
                 </configuration>
