--- a/pom.xml
+++ b/pom.xml
@@ -37,11 +37,11 @@
     <build>
         <resources>
             <resource>
+                <directory>src/main/resources/</directory>
+            </resource>
+            <resource>
                 <directory>src/main/java/com/yossis/threadray/ui/javafx/view</directory>
                 <targetPath>com/yossis/threadray/ui/javafx/view</targetPath>
-                <!--<includes>
-                    <include>*.fxml</include>
-                </includes>-->
             </resource>
         </resources>
         <plugins>
