Parsig thread state and displaying state icon

--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
                 <configuration>
                     <archive>
                         <manifestEntries>
-                            <Main-Class>com.yossis.threadray.ui.swing.ThreadRay</Main-Class>
+                            <Main-Class>com.yossis.threadray.ui.javafx.ThreadRayApp</Main-Class>
                         </manifestEntries>
                     </archive>
                 </configuration>
